<resources>
    <string name="app_name">SlimFileManager</string>

    <string name="file_manager">File Manager</string>

    <string name="blank" translatable="false">---</string>

    <!-- Shortcuts -->
    <string name="root_title">Root</string>
    <string name="sdcard_title">SD Card</string>
    <string name="downloads_title">Downloads</string>
    <string name="dcim_title">DCIM</string>

    <string name="cant_open_file">Unable to open file.</string>

    <string name="use_small_page_indicator">Use small page indicator</string>
    <string name="small_page_indicator_summary">Hide tabs and show small indicator.</string>

    <!-- Actions -->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="archive">Archive</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="done">Done</string>

    <string name="create_folder">Add Folder</string>
    <string name="create_file">Add File</string>
    <string name="folder_name_hint">Folder name</string>
    <string name="file_name_hint">File name</string>
    <string name="folder_exists">Folder exists</string>
    <string name="file_exists">File exists</string>
    <string name="unable_to_create_file">Cannot create file.</string>
    <string name="unable_to_create_folder">Cannot create folder.</string>

    <string name="destination_file_exists">Destination file exists</string>
    <string name="source_title">"Source: "</string>
    <string name="destination_title">"Destination: "</string>
    <string name="replace">Replace</string>
    <string name="replace_all">Replace All</string>
    <string name="skip">Skip</string>
    <string name="skip_all">Skip All</string>

    <string name="delete_dialog_title">"Delete files ?"</string>

    <string name="error">Error</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="defaultSshPort">22</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="use_ssh_key">Use SSH Key</string>
    <string name="ssh_key_path">SSH Key Path</string>
    <string name="ssh_key_path_desc" translatable="false">e.g. /var/www/id_rsa</string>
    <string name="ssh_key_passphrase">SSH Key Passphrase</string>
    <string name="password_hint" translatable="false">* * * * * * * *</string>
    <string name="browse">Browse</string>
    <string name="initial_path">Initial Path</string>
    <string name="initial_path_hint">Initial path (e.g. /var/www)</string>
    <string name="test_connection">Test Connection</string>
    <string name="error_retry">Error, Retry</string>
    <string name="testing_connection">Testing connection…</string>
    <string name="successful">Successful!</string>

    <string name="action_settings">Settings</string>

    <string name="icon_description">Item icon</string>

    <string name="enable_root_title">Enable root</string>

    <string name="delete_dialog_message">"This cannot be undone!"</string>
    <string name="back_confirm">Press back again to exit.</string>

    <!-- app theme -->
    <string name="theme_title">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>

    <!-- permissions-->
    <string name="permissions">Permissions</string>
    <string name="owner">Owner</string>
    <string name="group">Group</string>
    <string name="other">Other</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="execute">Execute</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Sort Mode -->
    <string name="sort_mode_title">Sort Mode</string>
    <string name="sort_mode_name">Name</string>
    <string name="sort_mode_size">Size</string>
    <string name="sort_mode_type">Type</string>

    <!-- Text Editor -->
    <string name="text_editor">Text Editor</string>
    <string name="use_monospace">Use monospace</string>
    <string name="recent_files">Recent files</string>
    <string name="font_size">Font size</string>
    <string name="connection_name">Connection Name</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="wrap_content">Wrap content</string>
    <string name="view_it_on_the_web">View it on the web</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="light_theme">Light Theme</string>
    <string name="goto_line">Go to Line…</string>
    <string name="goto_page">Go to Page…</string>
    <string name="find">Find</string>
    <string name="keyboard_suggestions_and_swipe">Keyboard suggestions and Swipe</string>
    <string name="enable_autoencoding">Auto-Encoding</string>
    <string name="set_as_working_folder">Set as the working folder</string>
    <string name="is_the_working_folder">This is the working folder</string>
    <string name="save_changes">Do you want to save the changes to the file %s?</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="text_to_find">Text to find</string>
    <string name="text_to_replace">Text to replace</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_wait">Please wait…</string>
    <string name="occurrences_found">%s occurrences was found</string>
    <string name="app_version_new">v%s</string>
    <string name="translate_the_app">Translate</string>
    <string name="changelog">Changelog</string>
    <string name="match_case">Match case</string>
    <string name="long_click_for_more_options">Long click for more options</string>
    <string name="auto_save">Auto save</string>
    <string name="read_only">Read only</string>
    <string name="send_error_reports">Send error reports</string>
    <string name="extra_options">Extra options</string>
    <string name="split_text_if_too_long">Split the text if too long</string>
    <string name="ignore_back_button">Ignore back button</string>
    <string name="encoding">Encoding</string>
    <string name="condividi">Share</string>
    <string name="info">Info</string>
    <string name="nome_app_turbo_editor">Turbo Editor</string>
    <string name="preferenze">Preferences</string>
    <string name="salva">Save</string>
    <string name="save_as">Save as</string>
    <string name="menu_syntax_highlight">Syntax highlight</string>
    <string name="testo_indietro">Undo</string>
    <string name="testo_rifai">Redo</string>
    <string name="open">Open</string>
    <string name="file_saved_with_success">The file %1$s was saved with success!</string>
    <string name="open_a_file">Open a file</string>
    <string name="no">No</string>
    <string name="new_file">New file</string>
    <string name="delete_current_file">Delete current file</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_black">Black theme</string>
    <string name="view_markdown_result">View markdown result</string>
    <string name="accessory_view">Accessory view</string>
    <string name="file_cannot_be_renamed">The file cannot be renamed</string>
    <string name="use_storage_access_framework">Use the "Storage Access Framework"</string>

    <string name="close">Close</string>

    <string name="modification_date">Modification date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="select">Select</string>
    <string name="home">Home</string>

    <!-- About -->
    <string name="about_action">About</string>
    <string name="about_title" translatable="false"><![CDATA[
        <b>%1$s</b>&nbsp;<font color="#888888">v%2$s</font>
    ]]></string>
    <string name="about_message"><![CDATA[
        Turbo Editor is a free and <a href="http://github.com/vmihalachi/turbo-editor">open source</a> app.
        Copyright 2013-2014 <a href="https://plus.google.com/+VladMihalachi">Vlad Mihalachi</a>. All Rights Reserved.<br/>
        <br/>
        Many thanks to all who
        <a href="http://crowdin.net/project/turbo-client">helped with translations</a> or
        donated to me.<br/>
        <br/>
        If you want to send feedback here is the <a href="http://forum.xda-developers.com/android/apps-games/app-turbo-editor-text-editor-t2832016">XDA thread</a>
    ]]></string>

</resources>
